<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>koolskateguy89</groupId>
    <artifactId>Anime-Filler-Manager</artifactId>
    <packaging>jar</packaging>
    <version>1.0</version>

    <name>AFM</name>
    <url>https://github.com/koolskateguy89/Anime-Filler-Manager</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>15</maven.compiler.release>
        <javafx.version>15.0.1</javafx.version>
    </properties>

    <dependencies>
		<!-- Project Lombok -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.16</version>
			<scope>provided</scope>
		</dependency>

    	<!-- JavaFX -->
    	<dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-base</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-media</artifactId>
            <version>${javafx.version}</version>
        </dependency>

        <!-- ControlsFX (mainly for Notification) -->
        <dependency>
        	<groupId>org.controlsfx</groupId>
        	<artifactId>controlsfx</artifactId>
        	<version>11.0.3</version>
        </dependency>

        <!-- Google Guava -->
        <dependency>
        	<groupId>com.google.guava</groupId>
        	<artifactId>guava</artifactId>
        	<version>30.1-jre</version>
        </dependency>

        <!-- jsoup -->
        <dependency>
        	<groupId>org.jsoup</groupId>
        	<artifactId>jsoup</artifactId>
        	<version>1.13.1</version>
        </dependency>

        <!-- sqlite jdbc driver -->
        <dependency>
        	<groupId>org.xerial</groupId>
        	<artifactId>sqlite-jdbc</artifactId>
        	<version>3.34.0</version>
        </dependency>

    </dependencies>

    <build>
		<finalName> ${project.name} </finalName>

        <plugins>
       		<!-- Enable preview features (atm Pattern Matching) to be able to compile -->
        	<plugin>
        		<groupId>org.apache.maven.plugins</groupId>
        		<artifactId>maven-compiler-plugin</artifactId>
        		<version>3.8.1</version>
        		<configuration>
        			<compilerArgs>
        				<arg>--enable-preview</arg>
        			</compilerArgs>
                </configuration>
        	</plugin>

        	<!-- Build an executable 'shaded' JAR -->
            <plugin>
            	<groupId>org.apache.maven.plugins</groupId>
            	<artifactId>maven-shade-plugin</artifactId>
            	<version>3.2.4</version>
            	<executions>
            		<execution>
            			<phase>package</phase>
            			<goals>
            				<goal>shade</goal>
            			</goals>

            			<configuration>
            				<createDependencyReducedPom>false</createDependencyReducedPom>

            				<transformers>
            					<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
            						<mainClass>afm.Launcher</mainClass>
            					</transformer>
            				</transformers>

            			</configuration>
            		</execution>
            	</executions>
            </plugin>

        </plugins>
    </build>

</project>
